demo/src/main/java/com/example/demo/liskov_substitution/good/ISleep.java
package com.example.demo.liskov_substitution.good;

public interface ISleep {
    void sleep();
}
